--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <img src="images/logo/Booki.png" class="booki">
             </div>
                 <nav class="hebergement-activite">
-                    <div class="conteneur-hebergement-activite">
+                    <a href="#hebergements"><div class="conteneur-hebergement-activite">
                         <button class="bouton-nav">Hébergements</button>
-                    </div>
-                    <div class="conteneur-hebergement-activite">
+                    </div></a>
+                    <a href="#marseille-partie"><div class="conteneur-hebergement-activite">
                         <button class="bouton-nav">Activité</button>
-                    </div>
+                    </div></a>
                 </nav>
         </header>
         <section class="section-info">
@@ -57,7 +57,7 @@
         <div class="main-container">
             <main>
                 <div class="hebergements-and-populaires">
-                    <section class="hebergements">
+                    <section class="hebergements" id="hebergements">
                         <p class="section-title">Hébergements à Marseille</p>
                         <div class="hebergements-cards">
                             <a href="#">
@@ -243,7 +243,7 @@
                         </div>
                     </section>
                 </div>
-                <div class=marseille-padding><p id="activites-marseille">Activités à Marseille</p>
+                <div class=marseille-partie id="marseille-partie"><p id="activites-marseille">Activités à Marseille</p>
                 <div class="marseille">
                         <article class="card-marseille">
                             <a href="#">
