--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="logo-img">
-                <img src="images/logo/Booki.png" class="booki">
+                <img src="images/logo/Booki.png" class="booki" alt="booki-logo">
             </div>
                 <nav class="hebergement-activite">
                     <a href="#hebergements"><div class="conteneur-hebergement-activite">
@@ -175,7 +175,7 @@
                                 </article>
                             </a>
                         </div>
-                        <a href="#"><p id="afficher-plus">Afficher plus</h2></a>
+                        <a href="#"><p id="afficher-plus">Afficher plus</a>
                     </section>
                     <section class="populaires">
                         <div class="populaires-title">
