--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <body>
         <header>
             <div class="logo-img">
-                <img src="images/logo/Booki.png" class="booki" alt="booki-logo">
+                <img src="images/logo/Booki.png" class="booki" alt="logo-booki">
             </div>
                 <nav class="hebergement-activite">
                     <a href="#hebergements"><div class="conteneur-hebergement-activite">
-                        <button class="bouton-nav">Hébergements</button>
+                        <div class="bouton-nav">Hébergements</div>
                     </div></a>
                     <a href="#marseille-partie"><div class="conteneur-hebergement-activite">
-                        <button class="bouton-nav">Activité</button>
+                        <div class="bouton-nav">Activité</div>
                     </div></a>
                 </nav>
         </header>
@@ -58,7 +58,7 @@
             <main>
                 <div class="hebergements-and-populaires">
                     <section class="hebergements" id="hebergements">
-                        <p class="section-title">Hébergements à Marseille</p>
+                        <h2 class="section-title">Hébergements à Marseille</h2>
                         <div class="hebergements-cards">
                             <a href="#">
                                 <article class="card">
@@ -175,7 +175,7 @@
                                 </article>
                             </a>
                         </div>
-                        <a href="#"><p id="afficher-plus">Afficher plus</a>
+                        <a href="#"><p id="afficher-plus">Afficher plus</p></a>
                     </section>
                     <section class="populaires">
                         <div class="populaires-title">
@@ -253,8 +253,8 @@
                                     <h3 class="card-title">Vieux-Port</h3> 
                                 </div>
                             </div>
+                            </a>
                         </article>
-                    </a>
                         <article class="card-marseille">
                             <a href="#">
                             <img src="./images/activites/paul-hermann.jpg" alt="Image du fort">
@@ -263,8 +263,9 @@
                                     <h3 class="card-title">Port de Pomègues</h3>
                                 </div>
                             </div>
+                        </a>
                         </article>
-                    </a>
+
                         <article class="card-marseille">
                             <a href="#">
                             <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image de la côte">
@@ -273,8 +274,9 @@
                                     <h3 class="card-title">Parc national des Calanques</h3>
                                 </div>
                             </div>
+                        </a>
                         </article>
-                    </a>
+
                         <article class="card-marseille">
                             <a href="#">
                             <img src="./images/activites/florian-wehde.jpg" alt="Image de la ville">
@@ -283,29 +285,33 @@
                                     <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
                                 </div>
                             </div>
+                        </a>
                         </article>
-                    </a>
+
                 </div>
                 </div>
             </main>
             <footer>
                     <div class="conteneur-en-tete-titre">
-                        <ul class="en-tete-titre">Á propos
-                            <a href="#"><li class="element-footer">Fonctionnement du site</li></a>
-                            <a href="#"><li class="element-footer">Conditions générales</li></a>
-                            <a href="#"><li class="element-footer">Données et confidentialité</li></a>
+                    <span class="en-tete-titre">Á propos</span>
+                        <ul>
+                            <li class="element-footer"><a href="#">Fonctionnement du site</a></li>
+                            <li class="element-footer"><a href="#">Conditions générales</a></li>
+                            <li class="element-footer"><a href="#">Données et confidentialité</a></li>
                         </ul>
                     </div>
                     <div class="conteneur-en-tete-titre">
-                        <ul class="en-tete-titre">Nos hébergements
-                            <a href="#"><li class="element-footer">Charte qualité</li></a>
-                            <a href="#"><li class="element-footer">Proposer votre hôtel</li></a>
+                    <span class="en-tete-titre">Nos hébergements</span>
+                        <ul>
+                            <li class="element-footer"><a href="#">Charte qualité</a></li>
+                            <li class="element-footer"><a href="#">Proposer votre hôtel</a></li>
                         </ul>
                     </div>
                     <div class="conteneur-en-tete-titre">
-                        <ul class="en-tete-titre">Assistance
-                            <a href="#"><li class="element-footer">Centre d'aide</li></a>
-                            <a href="#"><li class="element-footer">Nous contacter</li></a>
+                    <span class="en-tete-titre">Assistance</span>
+                        <ul>
+                            <li class="element-footer"><a href="#">Centre d'aide</a></li>
+                            <li class="element-footer"><a href="#">Nous contacter</a></li>
                         </ul>
                     </div>
             </footer>
